--- a/_navbar.scss
+++ b/_navbar.scss
@@ -4,19 +4,25 @@
 	color: whitesmoke;
 	.topnav
 	{
-		margin-left:12px;
-		margin-right:12px;
+		margin-left: 17px;
+    	margin-right: 5px;
 		margin-bottom: $m-bottom;
-		padding-top:5px;
-		font-size: 20px;
+		padding-top:18px;
+		font-size: 15px;
 		.logo
 		{
+			@import "sidenav";
 			float:left;
+			i
+			{
+				color: whitesmoke;
+			}
 		}
 		.name
 		{
 			position: absolute;
 			left: 37%;
+			top: 6px;
 		}
 		.language
 		{
@@ -31,6 +37,23 @@
 				{
 					color: black;
 				}
+			}
+			#dropdown
+			{
+				top: 41.8px !important;
+			    left: 248.3px !important;
+				i
+				{
+					position: absolute;
+				    top: -19px;
+				    left: 70px;
+				    color: whitesmoke;
+				    font-size: 33px;
+				}
+			}
+			.dropdown-content 
+			{
+			    overflow-y: visible !important;
 			}
 		
 		}
